--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,27 +1,18 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:22244",
-      "sslPort": 44392
+      "applicationUrl": "http://localhost:5273",
+      "sslPort": 44324
     }
   },
   "profiles": {
-    "http": {
+    "AnalyticBot_Translator": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5273",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5273", 
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
